Complete happy path now working

--- a/templates/Process/index.html.twig
+++ b/templates/Process/index.html.twig
@@ -6,6 +6,10 @@
     <p>{{ 'webgriffe_sylius_klarna.ui.please_wait'|trans }}</p>
 
     <img src="{{ asset('build/shop/images/loading.gif', 'shop') }}" alt="{{ 'webgriffe_sylius_klarna.ui.loading'|trans }}">
+
+    {% if redirectUrl %}
+        <p>{{ 'webgriffe_sylius_klarna.ui.return_to_klarna_checkout'|trans({'{redirectUrl}': redirectUrl}) }}</p>
+    {% endif %}
 {% endblock %}
 
 {% block javascripts %}
