--- a/templates/Process/index.html.twig
+++ b/templates/Process/index.html.twig
@@ -8,7 +8,9 @@
     <img src="{{ asset('build/shop/images/loading.gif', 'shop') }}" alt="{{ 'webgriffe_sylius_klarna.ui.loading'|trans }}">
 
     {% if redirectUrl %}
-        <p>{{ 'webgriffe_sylius_klarna.ui.return_to_klarna_checkout'|trans({'{redirectUrl}': redirectUrl})|raw }}</p>
+        <a href="{{ redirectUrl }}">
+            {{ 'webgriffe_sylius_klarna.ui.return_to_klarna_checkout'|trans }}
+        </a>
     {% endif %}
 {% endblock %}
 
